--- a/EdgeLedger/css/index.css
+++ b/EdgeLedger/css/index.css
@@ -1,21 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;;
 }
 
-a {
-    text-decoration: none;
+body {
+    font-family: 'Open Sans', sans-serif;
+    background: #fff;
+    color: #333;
+    line-height: 1.6;
 }
 
 ul {
     list-style-type: none;
 }
 
+a {
+    color: #333;
+    text-decoration: none;
+}
+
+h1, h2 {
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+p {
+    margin: 10px 0;
+}
+
+img {
+    width: 100%;
+}
+
+/* Navbar */
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    color: #fff;
+    opacity: 0.8;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0px;
+    padding: 0 30px;
+}
+
+.navbar a {
+    color: #fff;
+    padding: 10px 20px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    border-bottom: solid 2px #28a745;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar .logo {
+    font-weight: 400;
+}
+
+
+/* Header */
+
 .hero {
     background: url("./../images/home/showcase.jpg") no-repeat center center/cover;
     height: 100vh;
+    position: relative;
+    color: white;
+}
+
+.hero .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0 20px;
+}
+
+.hero .content h1 {
+    font-size: 55px;
+}
+
+.hero .content p {
+    font-size: 23px;
+    max-width: 600px;
+    margin: 20px 0 30px;
 }
 
 .hero::before {
@@ -32,36 +112,43 @@ ul {
     z-index: 10;
 }
 
-#navbar {
+/* Icons */
+.icons {
+    padding: 30px;
+}
+
+.icons h3 {
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.icons i {
+    background-color: #28a745;
+    color: #fff;
+    padding: 1rem;
+    border: none;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+.row {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 30px;
-    height: 70px;
+    flex-wrap: wrap;
 }
 
-.logo {
-    color: white;
-    font-size: 2rem;
+.flex-columns .column {
+    flex: 1;
 }
 
-.logo span {
-    color: green;
-}
-
-nav ul {
-    display: flex;
-}
-
-nav a {
-    color: white;
-    padding: 10px 20px;
-}
-
-.content {
-    color: white;
+.flex-columns .column-2 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 30vh;
+    justify-content:  center;
+    align-items: flex-start;
+    height: 100%;
+    padding: 0 30px;
+}
+
+.flex-columns a {
+    border: 2px solid;
 }
