--- a/EdgeLedger/css/index.css
+++ b/EdgeLedger/css/index.css
@@ -83,6 +83,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: center;
     height: 100%;
     padding: 0 20px;
@@ -131,24 +132,71 @@ img {
     margin-bottom: 15px;
 }
 
-.row {
-    display: flex;
-    flex-wrap: wrap;
+.team img {
+    border-radius: 50%;
 }
 
-.flex-columns .column {
-    flex: 1;
+.callback-form {
+    width: 100%;
+    padding: 20px 0;
 }
 
-.flex-columns .column-2 {
+.callback-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.callback-form .form-controll {
+    margin-bottom: 15px;
+}
+
+.callback-form input { 
+    width: 100%;;
+    padding: 4px;
+    height: 40px;
+    border: #f5f5f5 1px solid;
+}
+
+.callback-form .btn {
+    padding: 12px 0;
+    margin-top: 20px;
+}
+
+footer {
     display: flex;
     flex-direction: column;
-    justify-content:  center;
-    align-items: flex-start;
-    height: 100%;
-    padding: 0 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
 }
 
-.flex-columns a {
-    border: 2px solid;
+.footer a {
+    color: #fff;
+}
+
+footer .social > * {
+    margin-right: 30px;
+}
+
+
+@media(max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        height: 120px;
+        padding: 20px;
+    }
+
+    .flex-items {
+        flex-direction: column;
+    }
+
+    .flex-columns .column, .flex-grid .column {
+        flex: 100%;
+        max-width: 100%;
+    }
+
+    .flex-columns .column-2 {
+        padding: 30px;
+    }
 }
