--- a/EdgeLedger/css/utilities.css
+++ b/EdgeLedger/css/utilities.css
@@ -18,21 +18,25 @@
     opacity: 0.9;
 }
 
-.btn-primary {
+.btn-primary, .bg-primary {
     background-color: #28a745;
     color: #fff;
 }
-.btn-secondary {
+.btn-secondary, .bg-secondary {
     background-color: #0284d0;
     color: #fff;
 }
-.btn-dark {
+.btn-dark, .bg-dark {
     background-color: #333;
     color: #fff;
 }
-.btn-light {
+.btn-light, .bg-light {
     background-color: #f4f4f4;
     color: #333;
+}
+
+.btn-outline {
+    border: 1px solid #fff;
 }
 
 .flex-items {
@@ -46,7 +50,72 @@
     padding: 20px;
 }
 
-.bg-primary {
-    background-color: #28a745;
-    color: #fff;
+/* Flex columns */
+
+.flex-columns .row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.flex-columns .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+    height: 100%;
+}
+
+.flex-columns img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.flex-columns .column-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content:  center;
+    align-items: flex-start;
+    padding: 0 30px;
+}
+
+.flex-columns h2 {
+    font-size: 40px;
+    margin: 30px 0;
+}
+
+
+/* Section Header */
+
+.section-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0;
+}
+
+.section-header h2 { 
+    font-size: 40px;
+    margin: 20px 0;
+}
+
+.section-padding {
+    padding: 30px;
+}
+
+.flex-grid .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.flex-grid .column{
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
 }
