--- a/EdgeLedger/css/index.css
+++ b/EdgeLedger/css/index.css
@@ -89,6 +89,11 @@ img {
     padding: 0 20px;
 }
 
+.hero.blog {
+    background: url("./../images/home/blog.jpg") no-repeat center center/cover;
+    height: 30vh;
+}
+
 .hero .content h1 {
     font-size: 55px;
 }
@@ -199,4 +204,33 @@ footer .social > * {
     .flex-columns .column-2 {
         padding: 30px;
     }
+
+    .hero.blog .content {
+        display: flex;
+        justify-content: flex-end;
+        padding-bottom: 10px;
+    }
+}
+
+/* Post Page */
+
+.post {
+    padding: 30px;
+}
+
+.post h2 {
+    font-size: 40px;
+    border-bottom: 1px solid lightgrey;
+    padding: 10px 0;
+}
+
+.post img {
+    display: block;
+    margin: 0 auto 30px;
+    border-radius: 50%;
+    width: 300px;
+}
+
+.meta {
+    margin-bottom: 30px;
 }
