--- a/newsgrid/css/style.css
+++ b/newsgrid/css/style.css
@@ -44,7 +44,7 @@ img {
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Staatliches', cursive;
     margin-bottom: .55rem;
-    line-height: 1.3rem;
+    line-height: 1.3;
 }
 
 .container {
@@ -72,7 +72,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .card {
-    background: #ffffff;;
+    background: #ffffff;
     padding: 1rem; 
 }
 
@@ -97,6 +97,10 @@ h1,h2,h3,h4,h5,h6 {
 .p-1{ padding: 1.5rem}
 .p-2{ padding: 2rem}
 .p-3{ padding: 3rem}
+
+.l-heading {
+    font-size: 3rem;
+}
 
 .list li {
     border-bottom: #555 dotted 1px;
@@ -201,7 +205,7 @@ h1,h2,h3,h4,h5,h6 {
 .category {
     display: inline-block;
     border-radius: 15px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     padding: 0.4rem 0.6rem;
     font-size: .55rem;
 }
@@ -291,17 +295,16 @@ h1,h2,h3,h4,h5,h6 {
     padding: 2rem 1rem;
 }
 
-#about h1 {
-    font-size: 3rem;
-    margin-bottom: 2rem; 
+/* Article Page */
+
+#article .meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #eee;
+    padding: .55rem;
 }
 
-.page-container aside {
-    background: var(--primary-color);
-    color: #ffffff;
-    padding: 2rem 1rem;
-}
-
-.page-container aside a {
-    color: #ffffff;
+#article .meta .category {
+    margin-top: 0.4rem;
 }
