about page first version

--- a/portfolio/scss/_utilities.scss
+++ b/portfolio/scss/_utilities.scss
@@ -86,3 +86,13 @@ input[class^='btn-']:hover{
     }
     
 }
+
+.bg-light {
+    background: #f4f4f4;
+    color: #000;
+}
+
+.bg-dark {
+    background: $dark-color;
+    color: #fff;
+}
