--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -87,6 +87,16 @@ ul {
         }
     }
     }
+
+    &-about {
+        background: url("/dist/img/showcase.jpg") no-repeat; 
+        background-position: center 30%;
+
+        .bottom-line {
+            width: 100%;
+            border-bottom: 3px solid $main-color;
+        }
+    }
 }
 
 #home {
@@ -196,6 +206,105 @@ ul {
                }
             }
         }
+    }
+}
+
+#about {
+    &-a {
+        .section-title {
+            padding-bottom: 1rem;
+        }
+
+        .lead {
+            padding-top: 1rem;
+        }
+
+        .bottom-line {
+            width: 50px;
+            margin: auto;
+            border-bottom: 3px solid $main-color;
+        }
+
+        .about-info {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 1.2rem;
+
+            img {
+                grid-column: 0 /span 1;
+            }
+
+            .bio {
+                grid-column: 2 / span 2;
+                border-left: 3px solid $main-color;
+                padding: 0.5rem;
+            }
+
+            .award {
+                .fas {
+                    color: $main-color;
+                    margin: 1rem;
+                }
+            }
+        }
+    }
+
+    &-b {
+        .section-title {
+            padding-bottom: 1rem;
+            text-align: center;
+        }
+
+        .bottom-line {
+            width: 50px;
+            margin: auto;
+            border-bottom: 3px solid $main-color;
+        }
+        .progress {
+            overflow: hidden;
+            width: 100%;
+            height: 20px;
+            background: $medium-color;
+            border-radius: 5px;
+            margin-bottom: 0.6rem;
+            div {
+                background: $main-color;
+                height: 100%;
+            }
+        }
+    }
+
+    &-c {
+        .about-logos {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+
+            img {
+                width: 70%;
+                padding: 2rem 0;
+            }
+        }
+    }
+
+    &-d {
+        .testimonials {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+
+            ul {
+                display: flex;
+                align-items: center;
+                img {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    margin-right: 1rem;
+                }
+            }
+        }
+        
     }
 }
 
